--- a/package/crds/compute.gcp.upbound.io_instances.yaml
+++ b/package/crds/compute.gcp.upbound.io_instances.yaml
@@ -329,6 +329,11 @@ spec:
                                   The size of the image in gigabytes. If not specified, it
                                   will inherit the size of its base image.
                                 type: number
+                              storagePool:
+                                description: |-
+                                  The URL of the storage pool in which the new disk is created.
+                                  For example:
+                                type: string
                               type:
                                 description: The type of reservation from which this
                                   instance can consume resources.
@@ -365,6 +370,17 @@ spec:
                       documented below
                     items:
                       properties:
+                        confidentialInstanceType:
+                          description: 'Defines the confidential computing technology
+                            the instance uses. SEV is an AMD feature. One of the following
+                            values: SEV, SEV_SNP. on_host_maintenance can be set to
+                            MIGRATE if confidential_instance_type is set to SEV and
+                            min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
+                            has to be set to TERMINATE or this will fail to create
+                            the VM. If SEV_SNP, currently min_cpu_platform has to
+                            be set to "AMD Milan" or this will fail to create the
+                            VM.'
+                          type: string
                         enableConfidentialCompute:
                           description: Defines whether the instance should have confidential
                             compute enabled with AMD SEV. on_host_maintenance has
@@ -861,6 +877,26 @@ spec:
                                 type: number
                             type: object
                           type: array
+                        maxRunDuration:
+                          description: The duration of the instance. Instance will
+                            run and be terminated after then, the termination action
+                            could be defined in instance_termination_action. Structure
+                            is documented below.
+                          properties:
+                            nanos:
+                              description: |-
+                                Span of time that's a fraction of a second at nanosecond
+                                resolution. Durations less than one second are represented with a 0
+                                seconds field and a positive nanos field. Must be from 0 to
+                                999,999,999 inclusive.
+                              type: number
+                            seconds:
+                              description: |-
+                                Span of time at a resolution of a second. Must be from 0 to
+                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                              type: number
+                          type: object
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -901,6 +937,18 @@ spec:
                             instance. Can be MIGRATE or TERMINATE, for more info, read
                             here.
                           type: string
+                        onInstanceStopAction:
+                          description: Specifies the action to be performed when the
+                            instance is terminated using max_run_duration and STOP
+                            instance_termination_action. Only support true discard_local_ssd
+                            at this point. Structure is documented below.
+                          properties:
+                            discardLocalSsd:
+                              description: Whether to discard local SSDs attached
+                                to the VM while terminating using max_run_duration.
+                                Only supports true at this point.
+                              type: boolean
+                          type: object
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
@@ -1158,6 +1206,28 @@ spec:
                             Name with which attached disk will be accessible.
                             On the instance, this device will be /dev/disk/by-id/google-{{device_name}}.
                           type: string
+                        diskEncryptionKeyRawSecretRef:
+                          description: |-
+                            A 256-bit [customer-supplied encryption key]
+                            (https://cloud.google.com/compute/docs/disks/customer-supplied-encryption),
+                            encoded in RFC 4648 base64
+                            to encrypt this disk. Only one of kms_key_self_link and disk_encryption_key_raw
+                            may be set.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              description: Name of the secret.
+                              type: string
+                            namespace:
+                              description: Namespace of the secret.
+                              type: string
+                          required:
+                          - key
+                          - name
+                          - namespace
+                          type: object
                         initializeParams:
                           description: |-
                             Parameters for a new disk that will be created
@@ -1301,6 +1371,11 @@ spec:
                                   The size of the image in gigabytes. If not specified, it
                                   will inherit the size of its base image.
                                 type: number
+                              storagePool:
+                                description: |-
+                                  The URL of the storage pool in which the new disk is created.
+                                  For example:
+                                type: string
                               type:
                                 description: The type of reservation from which this
                                   instance can consume resources.
@@ -1337,6 +1412,17 @@ spec:
                       documented below
                     items:
                       properties:
+                        confidentialInstanceType:
+                          description: 'Defines the confidential computing technology
+                            the instance uses. SEV is an AMD feature. One of the following
+                            values: SEV, SEV_SNP. on_host_maintenance can be set to
+                            MIGRATE if confidential_instance_type is set to SEV and
+                            min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
+                            has to be set to TERMINATE or this will fail to create
+                            the VM. If SEV_SNP, currently min_cpu_platform has to
+                            be set to "AMD Milan" or this will fail to create the
+                            VM.'
+                          type: string
                         enableConfidentialCompute:
                           description: Defines whether the instance should have confidential
                             compute enabled with AMD SEV. on_host_maintenance has
@@ -1833,6 +1919,26 @@ spec:
                                 type: number
                             type: object
                           type: array
+                        maxRunDuration:
+                          description: The duration of the instance. Instance will
+                            run and be terminated after then, the termination action
+                            could be defined in instance_termination_action. Structure
+                            is documented below.
+                          properties:
+                            nanos:
+                              description: |-
+                                Span of time that's a fraction of a second at nanosecond
+                                resolution. Durations less than one second are represented with a 0
+                                seconds field and a positive nanos field. Must be from 0 to
+                                999,999,999 inclusive.
+                              type: number
+                            seconds:
+                              description: |-
+                                Span of time at a resolution of a second. Must be from 0 to
+                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                              type: number
+                          type: object
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -1873,6 +1979,18 @@ spec:
                             instance. Can be MIGRATE or TERMINATE, for more info, read
                             here.
                           type: string
+                        onInstanceStopAction:
+                          description: Specifies the action to be performed when the
+                            instance is terminated using max_run_duration and STOP
+                            instance_termination_action. Only support true discard_local_ssd
+                            at this point. Structure is documented below.
+                          properties:
+                            discardLocalSsd:
+                              description: Whether to discard local SSDs attached
+                                to the VM while terminating using max_run_duration.
+                                Only supports true at this point.
+                              type: boolean
+                          type: object
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
@@ -2375,6 +2493,11 @@ spec:
                                   The size of the image in gigabytes. If not specified, it
                                   will inherit the size of its base image.
                                 type: number
+                              storagePool:
+                                description: |-
+                                  The URL of the storage pool in which the new disk is created.
+                                  For example:
+                                type: string
                               type:
                                 description: The type of reservation from which this
                                   instance can consume resources.
@@ -2411,6 +2534,17 @@ spec:
                       documented below
                     items:
                       properties:
+                        confidentialInstanceType:
+                          description: 'Defines the confidential computing technology
+                            the instance uses. SEV is an AMD feature. One of the following
+                            values: SEV, SEV_SNP. on_host_maintenance can be set to
+                            MIGRATE if confidential_instance_type is set to SEV and
+                            min_cpu_platform is set to "AMD Milan". Otherwise, on_host_maintenance
+                            has to be set to TERMINATE or this will fail to create
+                            the VM. If SEV_SNP, currently min_cpu_platform has to
+                            be set to "AMD Milan" or this will fail to create the
+                            VM.'
+                          type: string
                         enableConfidentialCompute:
                           description: Defines whether the instance should have confidential
                             compute enabled with AMD SEV. on_host_maintenance has
@@ -2792,6 +2926,26 @@ spec:
                                 type: number
                             type: object
                           type: array
+                        maxRunDuration:
+                          description: The duration of the instance. Instance will
+                            run and be terminated after then, the termination action
+                            could be defined in instance_termination_action. Structure
+                            is documented below.
+                          properties:
+                            nanos:
+                              description: |-
+                                Span of time that's a fraction of a second at nanosecond
+                                resolution. Durations less than one second are represented with a 0
+                                seconds field and a positive nanos field. Must be from 0 to
+                                999,999,999 inclusive.
+                              type: number
+                            seconds:
+                              description: |-
+                                Span of time at a resolution of a second. Must be from 0 to
+                                315,576,000,000 inclusive. Note: these bounds are computed from: 60
+                                sec/min * 60 min/hr * 24 hr/day * 365.25 days/year * 10000 years.
+                              type: number
+                          type: object
                         minNodeCpus:
                           description: The minimum number of virtual CPUs this instance
                             will consume when running on a sole-tenant node.
@@ -2832,6 +2986,18 @@ spec:
                             instance. Can be MIGRATE or TERMINATE, for more info, read
                             here.
                           type: string
+                        onInstanceStopAction:
+                          description: Specifies the action to be performed when the
+                            instance is terminated using max_run_duration and STOP
+                            instance_termination_action. Only support true discard_local_ssd
+                            at this point. Structure is documented below.
+                          properties:
+                            discardLocalSsd:
+                              description: Whether to discard local SSDs attached
+                                to the VM while terminating using max_run_duration.
+                                Only supports true at this point.
+                              type: boolean
+                          type: object
                         preemptible:
                           description: |-
                             Specifies if the instance is preemptible.
