--- a/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
+++ b/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
@@ -236,6 +236,36 @@ spec:
                                       type: string
                                   type: object
                                 type: array
+                              exprOptions:
+                                description: |-
+                                  The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
+                                  Structure is documented below.
+                                properties:
+                                  recaptchaOptions:
+                                    description: |-
+                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                      Structure is documented below.
+                                    properties:
+                                      actionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA action-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                      sessionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA session-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                    type: object
+                                type: object
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
@@ -529,6 +559,36 @@ spec:
                                       type: string
                                   type: object
                                 type: array
+                              exprOptions:
+                                description: |-
+                                  The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
+                                  Structure is documented below.
+                                properties:
+                                  recaptchaOptions:
+                                    description: |-
+                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                      Structure is documented below.
+                                    properties:
+                                      actionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA action-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                      sessionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA session-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                    type: object
+                                type: object
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
@@ -987,6 +1047,36 @@ spec:
                                       type: string
                                   type: object
                                 type: array
+                              exprOptions:
+                                description: |-
+                                  The configuration options available when specifying a user defined CEVAL expression (i.e., 'expr').
+                                  Structure is documented below.
+                                properties:
+                                  recaptchaOptions:
+                                    description: |-
+                                      reCAPTCHA configuration options to be applied for the rule. If the rule does not evaluate reCAPTCHA tokens, this field has no effect.
+                                      Structure is documented below.
+                                    properties:
+                                      actionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA action-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                      sessionTokenSiteKeys:
+                                        description: A list of site keys to be used
+                                          during the validation of reCAPTCHA session-tokens.
+                                          The provided site keys need to be created
+                                          from reCAPTCHA API under the same project
+                                          where the security policy is created.
+                                        items:
+                                          type: string
+                                        type: array
+                                    type: object
+                                type: object
                               versionedExpr:
                                 description: |-
                                   Predefined rule expression. If this field is specified, config must also be specified.
