--- a/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
+++ b/package/crds/kms.gcp.upbound.io_cryptokeyversions.yaml
@@ -152,6 +152,21 @@ spec:
                             type: string
                         type: object
                     type: object
+                  externalProtectionLevelOptions:
+                    description: |-
+                      ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
+                      Structure is documented below.
+                    properties:
+                      ekmConnectionKeyPath:
+                        description: The path to the external key material on the
+                          EKM when using EkmConnection e.g., "v0/my/key". Set this
+                          field instead of externalKeyUri when using an EkmConnection.
+                        type: string
+                      externalKeyUri:
+                        description: The URI for an external resource that this CryptoKeyVersion
+                          represents.
+                        type: string
+                    type: object
                   state:
                     description: |-
                       The current state of the CryptoKeyVersion.
@@ -249,6 +264,21 @@ spec:
                             - IfNotPresent
                             type: string
                         type: object
+                    type: object
+                  externalProtectionLevelOptions:
+                    description: |-
+                      ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
+                      Structure is documented below.
+                    properties:
+                      ekmConnectionKeyPath:
+                        description: The path to the external key material on the
+                          EKM when using EkmConnection e.g., "v0/my/key". Set this
+                          field instead of externalKeyUri when using an EkmConnection.
+                        type: string
+                      externalKeyUri:
+                        description: The URI for an external resource that this CryptoKeyVersion
+                          represents.
+                        type: string
                     type: object
                   state:
                     description: |-
@@ -494,6 +524,21 @@ spec:
                       The name of the cryptoKey associated with the CryptoKeyVersions.
                       Format: 'projects/{{project}}/locations/{{location}}/keyRings/{{keyring}}/cryptoKeys/{{cryptoKey}}'
                     type: string
+                  externalProtectionLevelOptions:
+                    description: |-
+                      ExternalProtectionLevelOptions stores a group of additional fields for configuring a CryptoKeyVersion that are specific to the EXTERNAL protection level and EXTERNAL_VPC protection levels.
+                      Structure is documented below.
+                    properties:
+                      ekmConnectionKeyPath:
+                        description: The path to the external key material on the
+                          EKM when using EkmConnection e.g., "v0/my/key". Set this
+                          field instead of externalKeyUri when using an EkmConnection.
+                        type: string
+                      externalKeyUri:
+                        description: The URI for an external resource that this CryptoKeyVersion
+                          represents.
+                        type: string
+                    type: object
                   generateTime:
                     description: The time this CryptoKeyVersion key material was generated
                     type: string
