--- a/package/crds/monitoring.gcp.upbound.io_uptimecheckconfigs.yaml
+++ b/package/crds/monitoring.gcp.upbound.io_uptimecheckconfigs.yaml
@@ -252,6 +252,17 @@ spec:
                             Default value is GET.
                             Possible values are: METHOD_UNSPECIFIED, GET, POST.
                           type: string
+                        serviceAgentAuthentication:
+                          description: |-
+                            The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
+                            Structure is documented below.
+                          properties:
+                            type:
+                              description: |-
+                                The type of authentication to use.
+                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                              type: string
+                          type: object
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
@@ -714,6 +725,17 @@ spec:
                             Default value is GET.
                             Possible values are: METHOD_UNSPECIFIED, GET, POST.
                           type: string
+                        serviceAgentAuthentication:
+                          description: |-
+                            The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
+                            Structure is documented below.
+                          properties:
+                            type:
+                              description: |-
+                                The type of authentication to use.
+                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                              type: string
+                          type: object
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
@@ -1344,6 +1366,17 @@ spec:
                             Default value is GET.
                             Possible values are: METHOD_UNSPECIFIED, GET, POST.
                           type: string
+                        serviceAgentAuthentication:
+                          description: |-
+                            The authentication information using the Monitoring Service Agent. Optional when creating an HTTPS check; defaults to empty. Do not use with other authentication fields.
+                            Structure is documented below.
+                          properties:
+                            type:
+                              description: |-
+                                The type of authentication to use.
+                                Possible values are: SERVICE_AGENT_AUTHENTICATION_TYPE_UNSPECIFIED, OIDC_TOKEN.
+                              type: string
+                          type: object
                         useSsl:
                           description: If true, use HTTPS instead of HTTP to run the
                             check.
