--- a/package/crds/redis.gcp.upbound.io_instances.yaml
+++ b/package/crds/redis.gcp.upbound.io_instances.yaml
@@ -326,6 +326,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                  maintenanceVersion:
+                    description: The self service update maintenance version.
+                    type: string
                   memorySizeGb:
                     description: Redis memory size in GiB.
                     type: number
@@ -681,6 +684,9 @@ spec:
                           type: array
                       type: object
                     type: array
+                  maintenanceVersion:
+                    description: The self service update maintenance version.
+                    type: string
                   memorySizeGb:
                     description: Redis memory size in GiB.
                     type: number
@@ -1125,6 +1131,9 @@ spec:
                           type: string
                       type: object
                     type: array
+                  maintenanceVersion:
+                    description: The self service update maintenance version.
+                    type: string
                   memorySizeGb:
                     description: Redis memory size in GiB.
                     type: number
