--- a/package/crds/storage.gcp.upbound.io_buckets.yaml
+++ b/package/crds/storage.gcp.upbound.io_buckets.yaml
@@ -263,6 +263,27 @@ spec:
                                   The number of newer versions of an object to satisfy
                                   this condition.
                                 type: number
+                              sendDaysSinceCustomTimeIfZero:
+                                description: While set true, days_since_custom_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_custom_time field.
+                                  It can be used alone or together with days_since_custom_time.
+                                type: boolean
+                              sendDaysSinceNoncurrentTimeIfZero:
+                                description: While set true, days_since_noncurrent_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_noncurrent_time
+                                  field. It can be used alone or together with days_since_noncurrent_time.
+                                type: boolean
+                              sendNumNewerVersionsIfZero:
+                                description: While set true, num_newer_versions value
+                                  will be sent in the request even for zero value
+                                  of the field. This field is only useful for setting
+                                  0 value to the num_newer_versions field. It can
+                                  be used alone or together with num_newer_versions.
+                                type: boolean
                               withState:
                                 description: 'Match to live and/or archived objects.
                                   Unversioned buckets have only live objects. Supported
@@ -335,6 +356,20 @@ spec:
                       buckets. NOTE If used with single-region bucket, It will throw
                       an error.
                     type: string
+                  softDeletePolicy:
+                    description: The bucket's soft delete policy, which defines the
+                      period of time that soft-deleted objects will be retained, and
+                      cannot be permanently deleted. Structure is documented below.
+                    properties:
+                      retentionDurationSeconds:
+                        description: 'The duration in seconds that soft-deleted objects
+                          in the bucket will be retained and cannot be permanently
+                          deleted. Default value is 604800. The value must be in between
+                          604800(7 days) and 7776000(90 days). Note: To disable the
+                          soft delete policy on a bucket, This field must be set to
+                          0.'
+                        type: number
+                    type: object
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
@@ -575,6 +610,27 @@ spec:
                                   The number of newer versions of an object to satisfy
                                   this condition.
                                 type: number
+                              sendDaysSinceCustomTimeIfZero:
+                                description: While set true, days_since_custom_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_custom_time field.
+                                  It can be used alone or together with days_since_custom_time.
+                                type: boolean
+                              sendDaysSinceNoncurrentTimeIfZero:
+                                description: While set true, days_since_noncurrent_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_noncurrent_time
+                                  field. It can be used alone or together with days_since_noncurrent_time.
+                                type: boolean
+                              sendNumNewerVersionsIfZero:
+                                description: While set true, num_newer_versions value
+                                  will be sent in the request even for zero value
+                                  of the field. This field is only useful for setting
+                                  0 value to the num_newer_versions field. It can
+                                  be used alone or together with num_newer_versions.
+                                type: boolean
                               withState:
                                 description: 'Match to live and/or archived objects.
                                   Unversioned buckets have only live objects. Supported
@@ -647,6 +703,20 @@ spec:
                       buckets. NOTE If used with single-region bucket, It will throw
                       an error.
                     type: string
+                  softDeletePolicy:
+                    description: The bucket's soft delete policy, which defines the
+                      period of time that soft-deleted objects will be retained, and
+                      cannot be permanently deleted. Structure is documented below.
+                    properties:
+                      retentionDurationSeconds:
+                        description: 'The duration in seconds that soft-deleted objects
+                          in the bucket will be retained and cannot be permanently
+                          deleted. Default value is 604800. The value must be in between
+                          604800(7 days) and 7776000(90 days). Note: To disable the
+                          soft delete policy on a bucket, This field must be set to
+                          0.'
+                        type: number
+                    type: object
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
@@ -1059,6 +1129,27 @@ spec:
                                   The number of newer versions of an object to satisfy
                                   this condition.
                                 type: number
+                              sendDaysSinceCustomTimeIfZero:
+                                description: While set true, days_since_custom_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_custom_time field.
+                                  It can be used alone or together with days_since_custom_time.
+                                type: boolean
+                              sendDaysSinceNoncurrentTimeIfZero:
+                                description: While set true, days_since_noncurrent_time
+                                  value will be sent in the request even for zero
+                                  value of the field. This field is only useful for
+                                  setting 0 value to the days_since_noncurrent_time
+                                  field. It can be used alone or together with days_since_noncurrent_time.
+                                type: boolean
+                              sendNumNewerVersionsIfZero:
+                                description: While set true, num_newer_versions value
+                                  will be sent in the request even for zero value
+                                  of the field. This field is only useful for setting
+                                  0 value to the num_newer_versions field. It can
+                                  be used alone or together with num_newer_versions.
+                                type: boolean
                               withState:
                                 description: 'Match to live and/or archived objects.
                                   Unversioned buckets have only live objects. Supported
@@ -1091,6 +1182,8 @@ spec:
                       The ID of the project in which the resource belongs. If it
                       is not provided, the provider project is used.
                     type: string
+                  projectNumber:
+                    type: number
                   publicAccessPrevention:
                     description: Prevents public access to a bucket. Acceptable values
                       are "inherited" or "enforced". If "inherited", the bucket uses
@@ -1134,6 +1227,25 @@ spec:
                   selfLink:
                     description: The URI of the created resource.
                     type: string
+                  softDeletePolicy:
+                    description: The bucket's soft delete policy, which defines the
+                      period of time that soft-deleted objects will be retained, and
+                      cannot be permanently deleted. Structure is documented below.
+                    properties:
+                      effectiveTime:
+                        description: (Computed) Server-determined value that indicates
+                          the time from which the policy, or one with a greater retention,
+                          was effective. This value is in RFC 3339 format.
+                        type: string
+                      retentionDurationSeconds:
+                        description: 'The duration in seconds that soft-deleted objects
+                          in the bucket will be retained and cannot be permanently
+                          deleted. Default value is 604800. The value must be in between
+                          604800(7 days) and 7776000(90 days). Note: To disable the
+                          soft delete policy on a bucket, This field must be set to
+                          0.'
+                        type: number
+                    type: object
                   storageClass:
                     description: 'The Storage Class of the new bucket. Supported values
                       include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE, COLDLINE,
