--- a/package/crds/cloudfunctions2.gcp.upbound.io_functions.yaml
+++ b/package/crds/cloudfunctions2.gcp.upbound.io_functions.yaml
@@ -80,6 +80,11 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        automaticUpdatePolicy:
+                          description: |-
+                            Security patches are applied automatically to the runtime without requiring
+                            the function to be redeployed.
+                          type: object
                         dockerRepository:
                           description: User managed repository created in Artifact
                             Registry optionally with a customer managed encryption
@@ -176,11 +181,96 @@ spec:
                             for the function.
                           type: object
                           x-kubernetes-map-type: granular
+                        onDeployUpdatePolicy:
+                          description: |-
+                            Security patches are only applied when a function is redeployed.
+                            Structure is documented below.
+                          type: object
                         runtime:
                           description: |-
                             The runtime in which to run the function. Required when deploying a new
                             function, optional when updating an existing function.
                           type: string
+                        serviceAccount:
+                          description: The fully-qualified name of the service account
+                            to be used for building the container.
+                          type: string
+                        serviceAccountRef:
+                          description: Reference to a ServiceAccount in cloudplatform
+                            to populate serviceAccount.
+                          properties:
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            policy:
+                              description: Policies for referencing.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          required:
+                          - name
+                          type: object
+                        serviceAccountSelector:
+                          description: Selector for a ServiceAccount in cloudplatform
+                            to populate serviceAccount.
+                          properties:
+                            matchControllerRef:
+                              description: |-
+                                MatchControllerRef ensures an object with the same controller reference
+                                as the selecting object is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                            policy:
+                              description: Policies for selection.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          type: object
                         source:
                           description: |-
                             The location of the function source code.
@@ -1196,6 +1286,11 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        automaticUpdatePolicy:
+                          description: |-
+                            Security patches are applied automatically to the runtime without requiring
+                            the function to be redeployed.
+                          type: object
                         dockerRepository:
                           description: User managed repository created in Artifact
                             Registry optionally with a customer managed encryption
@@ -1292,11 +1387,96 @@ spec:
                             for the function.
                           type: object
                           x-kubernetes-map-type: granular
+                        onDeployUpdatePolicy:
+                          description: |-
+                            Security patches are only applied when a function is redeployed.
+                            Structure is documented below.
+                          type: object
                         runtime:
                           description: |-
                             The runtime in which to run the function. Required when deploying a new
                             function, optional when updating an existing function.
                           type: string
+                        serviceAccount:
+                          description: The fully-qualified name of the service account
+                            to be used for building the container.
+                          type: string
+                        serviceAccountRef:
+                          description: Reference to a ServiceAccount in cloudplatform
+                            to populate serviceAccount.
+                          properties:
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            policy:
+                              description: Policies for referencing.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          required:
+                          - name
+                          type: object
+                        serviceAccountSelector:
+                          description: Selector for a ServiceAccount in cloudplatform
+                            to populate serviceAccount.
+                          properties:
+                            matchControllerRef:
+                              description: |-
+                                MatchControllerRef ensures an object with the same controller reference
+                                as the selecting object is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                            policy:
+                              description: Policies for selection.
+                              properties:
+                                resolution:
+                                  default: Required
+                                  description: |-
+                                    Resolution specifies whether resolution of this reference is required.
+                                    The default is 'Required', which means the reconcile will fail if the
+                                    reference cannot be resolved. 'Optional' means this reference will be
+                                    a no-op if it cannot be resolved.
+                                  enum:
+                                  - Required
+                                  - Optional
+                                  type: string
+                                resolve:
+                                  description: |-
+                                    Resolve specifies when this reference should be resolved. The default
+                                    is 'IfNotPresent', which will attempt to resolve the reference only when
+                                    the corresponding field is not present. Use 'Always' to resolve the
+                                    reference on every reconcile.
+                                  enum:
+                                  - Always
+                                  - IfNotPresent
+                                  type: string
+                              type: object
+                          type: object
                         source:
                           description: |-
                             The location of the function source code.
@@ -2466,6 +2646,11 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        automaticUpdatePolicy:
+                          description: |-
+                            Security patches are applied automatically to the runtime without requiring
+                            the function to be redeployed.
+                          type: object
                         build:
                           description: |-
                             (Output)
@@ -2492,10 +2677,25 @@ spec:
                             for the function.
                           type: object
                           x-kubernetes-map-type: granular
+                        onDeployUpdatePolicy:
+                          description: |-
+                            Security patches are only applied when a function is redeployed.
+                            Structure is documented below.
+                          properties:
+                            runtimeVersion:
+                              description: |-
+                                (Output)
+                                The runtime version which was used during latest function deployment.
+                              type: string
+                          type: object
                         runtime:
                           description: |-
                             The runtime in which to run the function. Required when deploying a new
                             function, optional when updating an existing function.
+                          type: string
+                        serviceAccount:
+                          description: The fully-qualified name of the service account
+                            to be used for building the container.
                           type: string
                         source:
                           description: |-
