--- a/package/crds/compute.gcp.upbound.io_backendservices.yaml
+++ b/package/crds/compute.gcp.upbound.io_backendservices.yaml
@@ -907,6 +907,47 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        awsV4Authentication:
+                          description: |-
+                            The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                            Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                            Structure is documented below.
+                          properties:
+                            accessKeyId:
+                              description: The identifier of an access key used for
+                                s3 bucket authentication.
+                              type: string
+                            accessKeySecretRef:
+                              description: |-
+                                The access key used for s3 bucket authentication.
+                                Required for updating or creating a backend that uses AWS v4 signature authentication, but will not be returned as part of the configuration when queried with a REST API GET request.
+                                Note: This property is sensitive and will not be displayed in the plan.
+                              properties:
+                                key:
+                                  description: The key to select.
+                                  type: string
+                                name:
+                                  description: Name of the secret.
+                                  type: string
+                                namespace:
+                                  description: Namespace of the secret.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              - namespace
+                              type: object
+                            accessKeyVersion:
+                              description: The optional version identifier for the
+                                access key. You can use this to keep track of different
+                                iterations of your access key.
+                              type: string
+                            originRegion:
+                              description: |-
+                                The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                                For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                              type: string
+                          type: object
                         clientTlsPolicy:
                           description: |-
                             ClientTlsPolicy is a resource that specifies how a client should authenticate
@@ -923,6 +964,11 @@ spec:
                           type: array
                       type: object
                     type: array
+                  serviceLbPolicy:
+                    description: |-
+                      URL to networkservices.ServiceLbPolicy resource.
+                      Can only be set if load balancing scheme is EXTERNAL, EXTERNAL_MANAGED, INTERNAL_MANAGED or INTERNAL_SELF_MANAGED and the scope is global.
+                    type: string
                   sessionAffinity:
                     description: |-
                       Type of session affinity to use. The default is NONE. Session affinity is
@@ -1760,6 +1806,47 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        awsV4Authentication:
+                          description: |-
+                            The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                            Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                            Structure is documented below.
+                          properties:
+                            accessKeyId:
+                              description: The identifier of an access key used for
+                                s3 bucket authentication.
+                              type: string
+                            accessKeySecretRef:
+                              description: |-
+                                The access key used for s3 bucket authentication.
+                                Required for updating or creating a backend that uses AWS v4 signature authentication, but will not be returned as part of the configuration when queried with a REST API GET request.
+                                Note: This property is sensitive and will not be displayed in the plan.
+                              properties:
+                                key:
+                                  description: The key to select.
+                                  type: string
+                                name:
+                                  description: Name of the secret.
+                                  type: string
+                                namespace:
+                                  description: Namespace of the secret.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              - namespace
+                              type: object
+                            accessKeyVersion:
+                              description: The optional version identifier for the
+                                access key. You can use this to keep track of different
+                                iterations of your access key.
+                              type: string
+                            originRegion:
+                              description: |-
+                                The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                                For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                              type: string
+                          type: object
                         clientTlsPolicy:
                           description: |-
                             ClientTlsPolicy is a resource that specifies how a client should authenticate
@@ -1776,6 +1863,11 @@ spec:
                           type: array
                       type: object
                     type: array
+                  serviceLbPolicy:
+                    description: |-
+                      URL to networkservices.ServiceLbPolicy resource.
+                      Can only be set if load balancing scheme is EXTERNAL, EXTERNAL_MANAGED, INTERNAL_MANAGED or INTERNAL_SELF_MANAGED and the scope is global.
+                    type: string
                   sessionAffinity:
                     description: |-
                       Type of session affinity to use. The default is NONE. Session affinity is
@@ -2632,6 +2724,27 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        awsV4Authentication:
+                          description: |-
+                            The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                            Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                            Structure is documented below.
+                          properties:
+                            accessKeyId:
+                              description: The identifier of an access key used for
+                                s3 bucket authentication.
+                              type: string
+                            accessKeyVersion:
+                              description: The optional version identifier for the
+                                access key. You can use this to keep track of different
+                                iterations of your access key.
+                              type: string
+                            originRegion:
+                              description: |-
+                                The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                                For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                              type: string
+                          type: object
                         clientTlsPolicy:
                           description: |-
                             ClientTlsPolicy is a resource that specifies how a client should authenticate
@@ -2650,6 +2763,11 @@ spec:
                     type: array
                   selfLink:
                     description: The URI of the created resource.
+                    type: string
+                  serviceLbPolicy:
+                    description: |-
+                      URL to networkservices.ServiceLbPolicy resource.
+                      Can only be set if load balancing scheme is EXTERNAL, EXTERNAL_MANAGED, INTERNAL_MANAGED or INTERNAL_SELF_MANAGED and the scope is global.
                     type: string
                   sessionAffinity:
                     description: |-
