--- a/package/crds/compute.gcp.upbound.io_disks.yaml
+++ b/package/crds/compute.gcp.upbound.io_disks.yaml
@@ -383,6 +383,11 @@ spec:
                           type: string
                       type: object
                     type: array
+                  storagePool:
+                    description: |-
+                      The URL of the storage pool in which the new disk is created.
+                      For example:
+                    type: string
                   type:
                     description: |-
                       URL of the disk type resource describing which disk type to use to
@@ -526,6 +531,47 @@ spec:
                             The service account used for the encryption request for the given KMS key.
                             If absent, the Compute Engine Service Agent service account is used.
                           type: string
+                        rawKeySecretRef:
+                          description: |-
+                            Specifies a 256-bit customer-supplied encryption key, encoded in
+                            RFC 4648 base64 to either encrypt or decrypt this resource.
+                            Note: This property is sensitive and will not be displayed in the plan.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              description: Name of the secret.
+                              type: string
+                            namespace:
+                              description: Namespace of the secret.
+                              type: string
+                          required:
+                          - key
+                          - name
+                          - namespace
+                          type: object
+                        rsaEncryptedKeySecretRef:
+                          description: |-
+                            Specifies an RFC 4648 base64 encoded, RSA-wrapped 2048-bit
+                            customer-supplied encryption key to either encrypt or decrypt
+                            this resource. You can provide either the rawKey or the rsaEncryptedKey.
+                            Note: This property is sensitive and will not be displayed in the plan.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              description: Name of the secret.
+                              type: string
+                            namespace:
+                              description: Namespace of the secret.
+                              type: string
+                          required:
+                          - key
+                          - name
+                          - namespace
+                          type: object
                       type: object
                     type: array
                   enableConfidentialCompute:
@@ -675,6 +721,11 @@ spec:
                           type: string
                       type: object
                     type: array
+                  storagePool:
+                    description: |-
+                      The URL of the storage pool in which the new disk is created.
+                      For example:
+                    type: string
                   type:
                     description: |-
                       URL of the disk type resource describing which disk type to use to
@@ -1115,6 +1166,11 @@ spec:
                       that was later deleted and recreated under the same name, the source
                       snapshot ID would identify the exact version of the snapshot that was
                       used.
+                    type: string
+                  storagePool:
+                    description: |-
+                      The URL of the storage pool in which the new disk is created.
+                      For example:
                     type: string
                   terraformLabels:
                     additionalProperties:
