--- a/package/crds/compute.gcp.upbound.io_firewallpolicyrules.yaml
+++ b/package/crds/compute.gcp.upbound.io_firewallpolicyrules.yaml
@@ -280,6 +280,12 @@ spec:
                       Rules are evaluated from highest to lowest priority where 0
                       is the highest priority and 2147483647 is the lowest prority.
                     type: number
+                  securityProfileGroup:
+                    description: 'A fully-qualified URL of a SecurityProfileGroup
+                      resource. Example: https://networksecurity.googleapis.com/v1/organizations/{organizationId}/locations/global/securityProfileGroups/my-security-profile-group.
+                      It must be specified if action = ''apply_security_profile_group''
+                      and cannot be specified for other actions.'
+                    type: string
                   targetResources:
                     description: A list of network resource URLs to which this rule
                       applies. This field allows you to control which network's VMs
@@ -294,6 +300,11 @@ spec:
                     items:
                       type: string
                     type: array
+                  tlsInspect:
+                    description: Boolean flag indicating if the traffic should be
+                      TLS decrypted. It can be set only if action = 'apply_security_profile_group'
+                      and cannot be set for other actions.
+                    type: boolean
                 type: object
               initProvider:
                 description: |-
@@ -515,6 +526,12 @@ spec:
                       Rules are evaluated from highest to lowest priority where 0
                       is the highest priority and 2147483647 is the lowest prority.
                     type: number
+                  securityProfileGroup:
+                    description: 'A fully-qualified URL of a SecurityProfileGroup
+                      resource. Example: https://networksecurity.googleapis.com/v1/organizations/{organizationId}/locations/global/securityProfileGroups/my-security-profile-group.
+                      It must be specified if action = ''apply_security_profile_group''
+                      and cannot be specified for other actions.'
+                    type: string
                   targetResources:
                     description: A list of network resource URLs to which this rule
                       applies. This field allows you to control which network's VMs
@@ -529,6 +546,11 @@ spec:
                     items:
                       type: string
                     type: array
+                  tlsInspect:
+                    description: Boolean flag indicating if the traffic should be
+                      TLS decrypted. It can be set only if action = 'apply_security_profile_group'
+                      and cannot be set for other actions.
+                    type: boolean
                 type: object
               managementPolicies:
                 default:
@@ -861,6 +883,12 @@ spec:
                     description: Calculation of the complexity of a single firewall
                       policy rule.
                     type: number
+                  securityProfileGroup:
+                    description: 'A fully-qualified URL of a SecurityProfileGroup
+                      resource. Example: https://networksecurity.googleapis.com/v1/organizations/{organizationId}/locations/global/securityProfileGroups/my-security-profile-group.
+                      It must be specified if action = ''apply_security_profile_group''
+                      and cannot be specified for other actions.'
+                    type: string
                   targetResources:
                     description: A list of network resource URLs to which this rule
                       applies. This field allows you to control which network's VMs
@@ -875,6 +903,11 @@ spec:
                     items:
                       type: string
                     type: array
+                  tlsInspect:
+                    description: Boolean flag indicating if the traffic should be
+                      TLS decrypted. It can be set only if action = 'apply_security_profile_group'
+                      and cannot be set for other actions.
+                    type: boolean
                 type: object
               conditions:
                 description: Conditions of the resource.
