--- a/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
@@ -206,6 +206,12 @@ spec:
                   instanceLifecyclePolicy:
                     items:
                       properties:
+                        defaultActionOnFailure:
+                          description: ', Default behavior for all instance or health
+                            check failures. Valid options are: REPAIR, DO_NOTHING.
+                            If DO_NOTHING then instances will not be repaired. If
+                            REPAIR (default), then failed instances will be repaired.'
+                          type: string
                         forceUpdateOnRepair:
                           description: '), Specifies whether to apply the group''s
                             latest configuration when repairing a VM. Valid options
@@ -750,6 +756,12 @@ spec:
                   instanceLifecyclePolicy:
                     items:
                       properties:
+                        defaultActionOnFailure:
+                          description: ', Default behavior for all instance or health
+                            check failures. Valid options are: REPAIR, DO_NOTHING.
+                            If DO_NOTHING then instances will not be repaired. If
+                            REPAIR (default), then failed instances will be repaired.'
+                          type: string
                         forceUpdateOnRepair:
                           description: '), Specifies whether to apply the group''s
                             latest configuration when repairing a VM. Valid options
@@ -1392,6 +1404,12 @@ spec:
                   instanceLifecyclePolicy:
                     items:
                       properties:
+                        defaultActionOnFailure:
+                          description: ', Default behavior for all instance or health
+                            check failures. Valid options are: REPAIR, DO_NOTHING.
+                            If DO_NOTHING then instances will not be repaired. If
+                            REPAIR (default), then failed instances will be repaired.'
+                          type: string
                         forceUpdateOnRepair:
                           description: '), Specifies whether to apply the group''s
                             latest configuration when repairing a VM. Valid options
@@ -1511,6 +1529,10 @@ spec:
                             apply the configuration.
                           items:
                             properties:
+                              currentRevision:
+                                description: Current all-instances configuration revision.
+                                  This value is in RFC3339 text format.
+                                type: string
                               effective:
                                 type: boolean
                             type: object
