--- a/package/crds/datafusion.gcp.upbound.io_instances.yaml
+++ b/package/crds/datafusion.gcp.upbound.io_instances.yaml
@@ -306,6 +306,13 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        connectionType:
+                          description: |-
+                            Optional. Type of connection for establishing private IP connectivity between the Data Fusion customer project VPC and
+                            the corresponding tenant project from a predefined list of available connection modes.
+                            If this field is unspecified for a private instance, VPC peering is used.
+                            Possible values are: VPC_PEERING, PRIVATE_SERVICE_CONNECT_INTERFACES.
+                          type: string
                         ipAllocation:
                           description: |-
                             The IP range in CIDR notation to use for the managed Data Fusion instance
@@ -317,6 +324,26 @@ spec:
                             will be peered for executing pipelines. In case of shared VPC where the network resides in another host
                             project the network should specified in the form of projects/{host-project-id}/global/networks/{network}
                           type: string
+                        privateServiceConnectConfig:
+                          description: |-
+                            Optional. Configuration for Private Service Connect.
+                            This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                            Structure is documented below.
+                          properties:
+                            networkAttachment:
+                              description: |-
+                                Optional. The reference to the network attachment used to establish private connectivity.
+                                It will be of the form projects/{project-id}/regions/{region}/networkAttachments/{network-attachment-id}.
+                                This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                              type: string
+                            unreachableCidrBlock:
+                              description: |-
+                                Optional. Input only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.
+                                The size of this block should be at least /25. This range should not overlap with the primary address range of any subnetwork used by the network attachment.
+                                This range can be used for other purposes in the consumer VPC as long as there is no requirement for CDF to reach destinations using these addresses.
+                                If this value is not provided, the server chooses a non RFC 1918 address range. The format of this field is governed by RFC 4632.
+                              type: string
+                          type: object
                       type: object
                     type: array
                   options:
@@ -599,6 +626,13 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        connectionType:
+                          description: |-
+                            Optional. Type of connection for establishing private IP connectivity between the Data Fusion customer project VPC and
+                            the corresponding tenant project from a predefined list of available connection modes.
+                            If this field is unspecified for a private instance, VPC peering is used.
+                            Possible values are: VPC_PEERING, PRIVATE_SERVICE_CONNECT_INTERFACES.
+                          type: string
                         ipAllocation:
                           description: |-
                             The IP range in CIDR notation to use for the managed Data Fusion instance
@@ -610,6 +644,26 @@ spec:
                             will be peered for executing pipelines. In case of shared VPC where the network resides in another host
                             project the network should specified in the form of projects/{host-project-id}/global/networks/{network}
                           type: string
+                        privateServiceConnectConfig:
+                          description: |-
+                            Optional. Configuration for Private Service Connect.
+                            This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                            Structure is documented below.
+                          properties:
+                            networkAttachment:
+                              description: |-
+                                Optional. The reference to the network attachment used to establish private connectivity.
+                                It will be of the form projects/{project-id}/regions/{region}/networkAttachments/{network-attachment-id}.
+                                This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                              type: string
+                            unreachableCidrBlock:
+                              description: |-
+                                Optional. Input only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.
+                                The size of this block should be at least /25. This range should not overlap with the primary address range of any subnetwork used by the network attachment.
+                                This range can be used for other purposes in the consumer VPC as long as there is no requirement for CDF to reach destinations using these addresses.
+                                If this value is not provided, the server chooses a non RFC 1918 address range. The format of this field is governed by RFC 4632.
+                              type: string
+                          type: object
                       type: object
                     type: array
                   options:
@@ -921,6 +975,13 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        connectionType:
+                          description: |-
+                            Optional. Type of connection for establishing private IP connectivity between the Data Fusion customer project VPC and
+                            the corresponding tenant project from a predefined list of available connection modes.
+                            If this field is unspecified for a private instance, VPC peering is used.
+                            Possible values are: VPC_PEERING, PRIVATE_SERVICE_CONNECT_INTERFACES.
+                          type: string
                         ipAllocation:
                           description: |-
                             The IP range in CIDR notation to use for the managed Data Fusion instance
@@ -932,6 +993,32 @@ spec:
                             will be peered for executing pipelines. In case of shared VPC where the network resides in another host
                             project the network should specified in the form of projects/{host-project-id}/global/networks/{network}
                           type: string
+                        privateServiceConnectConfig:
+                          description: |-
+                            Optional. Configuration for Private Service Connect.
+                            This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                            Structure is documented below.
+                          properties:
+                            effectiveUnreachableCidrBlock:
+                              description: |-
+                                (Output)
+                                Output only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.
+                                The size of this block is /25. The format of this field is governed by RFC 4632.
+                              type: string
+                            networkAttachment:
+                              description: |-
+                                Optional. The reference to the network attachment used to establish private connectivity.
+                                It will be of the form projects/{project-id}/regions/{region}/networkAttachments/{network-attachment-id}.
+                                This is required only when using connection type PRIVATE_SERVICE_CONNECT_INTERFACES.
+                              type: string
+                            unreachableCidrBlock:
+                              description: |-
+                                Optional. Input only. The CIDR block to which the CDF instance can't route traffic to in the consumer project VPC.
+                                The size of this block should be at least /25. This range should not overlap with the primary address range of any subnetwork used by the network attachment.
+                                This range can be used for other purposes in the consumer VPC as long as there is no requirement for CDF to reach destinations using these addresses.
+                                If this value is not provided, the server chooses a non RFC 1918 address range. The format of this field is governed by RFC 4632.
+                              type: string
+                          type: object
                       type: object
                     type: array
                   options:
