--- a/package/crds/dataproc.gcp.upbound.io_clusters.yaml
+++ b/package/crds/dataproc.gcp.upbound.io_clusters.yaml
@@ -142,6 +142,13 @@ spec:
                                                     The disk type of the primary disk attached to each node.
                                                     One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                                   type: string
+                                                localSsdInterface:
+                                                  description: |-
+                                                    Optional. Interface type of local SSDs (default is "scsi").
+                                                    Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                                    Memory Express). See
+                                                    local SSD performance.
+                                                  type: string
                                                 numLocalSsds:
                                                   description: |-
                                                     The amount of local SSD disks that will be
@@ -507,6 +514,13 @@ spec:
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                       type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
+                                      type: string
                                     numLocalSsds:
                                       description: |-
                                         The amount of local SSD disks that will be
@@ -573,6 +587,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
@@ -801,6 +822,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
@@ -1155,6 +1183,13 @@ spec:
                                                     The disk type of the primary disk attached to each node.
                                                     One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                                   type: string
+                                                localSsdInterface:
+                                                  description: |-
+                                                    Optional. Interface type of local SSDs (default is "scsi").
+                                                    Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                                    Memory Express). See
+                                                    local SSD performance.
+                                                  type: string
                                                 numLocalSsds:
                                                   description: |-
                                                     The amount of local SSD disks that will be
@@ -1520,6 +1555,13 @@ spec:
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                       type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
+                                      type: string
                                     numLocalSsds:
                                       description: |-
                                         The amount of local SSD disks that will be
@@ -1586,6 +1628,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
@@ -1814,6 +1863,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
@@ -2337,6 +2393,13 @@ spec:
                                                     The disk type of the primary disk attached to each node.
                                                     One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                                   type: string
+                                                localSsdInterface:
+                                                  description: |-
+                                                    Optional. Interface type of local SSDs (default is "scsi").
+                                                    Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                                    Memory Express). See
+                                                    local SSD performance.
+                                                  type: string
                                                 numLocalSsds:
                                                   description: |-
                                                     The amount of local SSD disks that will be
@@ -2652,6 +2715,13 @@ spec:
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
                                       type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
+                                      type: string
                                     numLocalSsds:
                                       description: |-
                                         The amount of local SSD disks that will be
@@ -2725,6 +2795,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
@@ -2978,6 +3055,13 @@ spec:
                                       description: |-
                                         The disk type of the primary disk attached to each node.
                                         One of "pd-ssd" or "pd-standard". Defaults to "pd-standard".
+                                      type: string
+                                    localSsdInterface:
+                                      description: |-
+                                        Optional. Interface type of local SSDs (default is "scsi").
+                                        Valid values: "scsi" (Small Computer System Interface), "nvme" (Non-Volatile
+                                        Memory Express). See
+                                        local SSD performance.
                                       type: string
                                     numLocalSsds:
                                       description: |-
