--- a/package/crds/datastream.gcp.upbound.io_privateconnections.yaml
+++ b/package/crds/datastream.gcp.upbound.io_privateconnections.yaml
@@ -74,6 +74,9 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  createWithoutValidation:
+                    description: If set to true, will skip validations.
+                    type: boolean
                   displayName:
                     description: Display name.
                     type: string
@@ -204,6 +207,9 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  createWithoutValidation:
+                    description: If set to true, will skip validations.
+                    type: boolean
                   displayName:
                     description: Display name.
                     type: string
@@ -496,6 +502,9 @@ spec:
             properties:
               atProvider:
                 properties:
+                  createWithoutValidation:
+                    description: If set to true, will skip validations.
+                    type: boolean
                   displayName:
                     description: Display name.
                     type: string
