--- a/package/crds/monitoring.gcp.upbound.io_alertpolicies.yaml
+++ b/package/crds/monitoring.gcp.upbound.io_alertpolicies.yaml
@@ -881,6 +881,26 @@ spec:
                             exceed more than 10,240 bytes when encoded in UTF-8 format,
                             whichever is smaller.
                           type: string
+                        links:
+                          description: |-
+                            Links to content such as playbooks, repositories, and other resources. This field can contain up to 3 entries.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              displayName:
+                                description: 'A short display name for the link. The
+                                  display name must not be empty or exceed 63 characters.
+                                  Example: "playbook".'
+                                type: string
+                              url:
+                                description: 'The url of a webpage. A url can be templatized
+                                  by using variables in the path or the query parameters.
+                                  The total length of a URL should not exceed 2083
+                                  characters before and after variable expansion.
+                                  Example: "https://my_domain.com/playbook?name=${resource.name}".'
+                                type: string
+                            type: object
+                          type: array
                         mimeType:
                           description: |-
                             The format of the content field. Presently, only the value
@@ -1755,6 +1775,26 @@ spec:
                             exceed more than 10,240 bytes when encoded in UTF-8 format,
                             whichever is smaller.
                           type: string
+                        links:
+                          description: |-
+                            Links to content such as playbooks, repositories, and other resources. This field can contain up to 3 entries.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              displayName:
+                                description: 'A short display name for the link. The
+                                  display name must not be empty or exceed 63 characters.
+                                  Example: "playbook".'
+                                type: string
+                              url:
+                                description: 'The url of a webpage. A url can be templatized
+                                  by using variables in the path or the query parameters.
+                                  The total length of a URL should not exceed 2083
+                                  characters before and after variable expansion.
+                                  Example: "https://my_domain.com/playbook?name=${resource.name}".'
+                                type: string
+                            type: object
+                          type: array
                         mimeType:
                           description: |-
                             The format of the content field. Presently, only the value
@@ -2831,6 +2871,26 @@ spec:
                             exceed more than 10,240 bytes when encoded in UTF-8 format,
                             whichever is smaller.
                           type: string
+                        links:
+                          description: |-
+                            Links to content such as playbooks, repositories, and other resources. This field can contain up to 3 entries.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              displayName:
+                                description: 'A short display name for the link. The
+                                  display name must not be empty or exceed 63 characters.
+                                  Example: "playbook".'
+                                type: string
+                              url:
+                                description: 'The url of a webpage. A url can be templatized
+                                  by using variables in the path or the query parameters.
+                                  The total length of a URL should not exceed 2083
+                                  characters before and after variable expansion.
+                                  Example: "https://my_domain.com/playbook?name=${resource.name}".'
+                                type: string
+                            type: object
+                          type: array
                         mimeType:
                           description: |-
                             The format of the content field. Presently, only the value
