--- a/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
+++ b/package/crds/privateca.gcp.upbound.io_certificateauthorities.yaml
@@ -153,6 +153,15 @@ spec:
                                 type: array
                             type: object
                           type: array
+                        subjectKeyId:
+                          description: |-
+                            When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
+                            Structure is documented below.
+                          properties:
+                            keyId:
+                              description: The value of the KeyId in lowercase hexidecimal.
+                              type: string
+                          type: object
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
@@ -805,6 +814,15 @@ spec:
                                 type: array
                             type: object
                           type: array
+                        subjectKeyId:
+                          description: |-
+                            When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
+                            Structure is documented below.
+                          properties:
+                            keyId:
+                              description: The value of the KeyId in lowercase hexidecimal.
+                              type: string
+                          type: object
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
@@ -1563,6 +1581,15 @@ spec:
                                 type: array
                             type: object
                           type: array
+                        subjectKeyId:
+                          description: |-
+                            When specified this provides a custom SKI to be used in the certificate. This should only be used to maintain a SKI of an existing CA originally created outside CA service, which was not generated using method (1) described in RFC 5280 section 4.2.1.2..
+                            Structure is documented below.
+                          properties:
+                            keyId:
+                              description: The value of the KeyId in lowercase hexidecimal.
+                              type: string
+                          type: object
                         x509Config:
                           description: |-
                             Describes how some of the technical X.509 fields in a certificate should be populated.
