--- a/package/crds/secretmanager.gcp.upbound.io_secrets.yaml
+++ b/package/crds/secretmanager.gcp.upbound.io_secrets.yaml
@@ -227,6 +227,14 @@ spec:
                       { "name": "wrench", "mass": "1.3kg", "count": "3" }.
                     type: object
                     x-kubernetes-map-type: granular
+                  versionDestroyTtl:
+                    description: |-
+                      Secret Version TTL after destruction request.
+                      This is a part of the delayed delete feature on Secret Version.
+                      For secret with versionDestroyTtl>0, version destruction doesn't happen immediately
+                      on calling destroy instead the version goes to a disabled state and
+                      the actual destruction happens after this TTL expires.
+                    type: string
                 type: object
               initProvider:
                 description: |-
@@ -395,6 +403,14 @@ spec:
                       { "name": "wrench", "mass": "1.3kg", "count": "3" }.
                     type: object
                     x-kubernetes-map-type: granular
+                  versionDestroyTtl:
+                    description: |-
+                      Secret Version TTL after destruction request.
+                      This is a part of the delayed delete feature on Secret Version.
+                      For secret with versionDestroyTtl>0, version destruction doesn't happen immediately
+                      on calling destroy instead the version goes to a disabled state and
+                      the actual destruction happens after this TTL expires.
+                    type: string
                 type: object
               managementPolicies:
                 default:
@@ -756,6 +772,14 @@ spec:
                       { "name": "wrench", "mass": "1.3kg", "count": "3" }.
                     type: object
                     x-kubernetes-map-type: granular
+                  versionDestroyTtl:
+                    description: |-
+                      Secret Version TTL after destruction request.
+                      This is a part of the delayed delete feature on Secret Version.
+                      For secret with versionDestroyTtl>0, version destruction doesn't happen immediately
+                      on calling destroy instead the version goes to a disabled state and
+                      the actual destruction happens after this TTL expires.
+                    type: string
                 type: object
               conditions:
                 description: Conditions of the resource.
